--- a/ggNtuplizer/test/crab/mc/multicrab.cfg
+++ b/ggNtuplizer/test/crab/mc/multicrab.cfg
@@ -1,18 +1,19 @@
 [MULTICRAB]
-cfg=crab_mc_8TeV.cfg
+cfg=crab_JHU.cfg
 
-[COMMON]
 
-[job_summer12_ttjets_1l]
-CMSSW.datasetpath           = /TTJets_SemiLeptMGDecays_8TeV-madgraph/Summer12_DR53X-PU_RD1_START53_V7N-v1/AODSIM
-CMSSW.pset                  = run_fullchain_mc_53X_NoTrks.py
-CMSSW.events_per_job        = 25000
-USER.user_remote_dir        = job_summer12_ttjets_1l
-USER.ui_working_dir         = job_summer12_ttjets_1l
+[jhu_8TeV_0m_gghjj_125p6_v6]
+CMSSW.datasetpath=/JJHiggs0MToGG_M-125p6_8TeV-JHUGenV4-pythia6-tauola/Summer12_DR53X-PU_RD1_START53_V7N-v2/AODSIM
+USER.user_remote_dir=ggNtuples/MC/SpinParityOfficial/jhu_8TeV_0m_gghjj_125p6_v6/
 
-[job_summer12_ttg]
-CMSSW.datasetpath           = /TTGJets_8TeV-madgraph/Summer12_DR53X-PU_RD1_START53_V7N-v1/AODSIM
-CMSSW.pset                  = run_fullchain_mc_53X_NoTrks.py
-CMSSW.events_per_job        = 25000
-USER.user_remote_dir        = job_summer12_ttg
-USER.ui_working_dir         = job_summer12_ttg
+[jhu_8TeV_0p_gghjj_125p6_v6]
+CMSSW.datasetpath=/JJHiggs0PToGG_M-125p6_8TeV-JHUGenV4-pythia6-tauola/Summer12_DR53X-PU_RD1_START53_V7N-v1/AODSIM
+USER.user_remote_dir=ggNtuples/MC/SpinParityOfficial/jhu_8TeV_0p_gghjj_125p6_v6/
+
+[jhu_8TeV_SM0p_VBF_125p_v6]
+CMSSW.datasetpath=/VBFHiggs0PToGG_M-125p6_8TeV-JHUGenV4-pythia6-tauola/Summer12_DR53X-PU_RD1_START53_V7N-v3/AODSIM
+USER.user_remote_dir=ggNtuples/MC/SpinParityOfficial/jhu_8TeV_SM0p_VBF_125p_v6/
+
+[jhu_8TeV_0m_VBF_125p_v6]
+CMSSW.datasetpath=/VBFHiggs0MToGG_M-125p6_8TeV-JHUGenV4-pythia6-tauola/Summer12_DR53X-PU_RD1_START53_V7N-v1/AODSIM
+USER.user_remote_dir=ggNtuples/MC/SpinParityOfficial/jhu_8TeV_0m_VBF_125p6_v6/
